--- a/src/less/material/calendar.less
+++ b/src/less/material/calendar.less
@@ -36,6 +36,9 @@
         top: 0;
         box-shadow: none;
     }
+    &.picker-modal {
+        z-index: 12500;
+    }
         
 }
 .popover.popover-picker-calendar {
