--- a/src/less/material/modals.less
+++ b/src/less/material/modals.less
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.4);
-    z-index: 10600;
+    z-index: 13000;
     visibility: hidden;
     opacity: 0;
     .transition(@modalDuration);
@@ -23,12 +23,15 @@
     }
 }
 .popup-overlay {
-    z-index: 10200;
+    z-index: 10500;
+}
+.picker-modal-overlay {
+    z-index: 12000;
 }
 .modal {
     width: 280px;
     position: absolute;
-    z-index: 11000;
+    z-index: 13500;
     left: 50%;
     margin-left: -140px;
     margin-top: 0;
@@ -53,7 +56,7 @@
     }
     &.modal-out {
         opacity: 0;
-        z-index: 11000-1;
+        z-index: 13500-1;
         .transition(@modalDuration);
         .transform(translate3d(0,0,0) scale(0.815));
     }
@@ -119,7 +122,7 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    z-index: 11000;
+    z-index: 13500;
     width: 100%;
     background: #fff;
     .transform(translate3d(0,100%,0));
@@ -128,7 +131,7 @@
         .transform(translate3d(0,0,0));
     }
     &.modal-out {
-        z-index: 11000-1;
+        z-index: 13500-1;
         .transition(@actionsModalDuration);
         .transform(translate3d(0,100%,0));
     }
@@ -224,7 +227,7 @@ input.modal-text-input {
 .popover {
     width: 320px;
     background: #fff;
-    z-index: 11000;
+    z-index: 13500;
     margin: 0;
     top: 0;
     opacity: 0;
@@ -315,7 +318,7 @@ input.modal-text-input {
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 10400;
+    z-index: 11000;
     background: #fff;
     box-sizing:border-box;
     display: none;
@@ -368,7 +371,7 @@ html.with-statusbar-overlay {
             top: 20px;
         }
         .popup-overlay {
-            z-index: 9800;
+            z-index: 9500;
         }
     }
     .login-screen, .popup.tablet-fullscreen {
@@ -397,7 +400,7 @@ html.with-statusbar-overlay {
     margin-left: -24px;
     margin-top: -24px;
     background: rgba(0,0,0,0.8);
-    z-index: 11000;
+    z-index: 13500;
     border-radius: 4px;
     .preloader {
         display: block;
@@ -411,7 +414,7 @@ html.with-statusbar-overlay {
     bottom: 0;
     width: 100%;
     height: 260px;
-    z-index: 11500;
+    z-index: 12000;
     display: none;
     -webkit-transition-property: -webkit-transform;
     -moz-transition-property: -moz-transform;
