--- a/src/less/material/photo-browser.less
+++ b/src/less/material/photo-browser.less
@@ -5,7 +5,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    z-index: 10500;
+    z-index: 11500;
     body > & {
         opacity: 0;
         display: none;
